# serializer version: 1
# name: TestTimeCriterion.test_combined_duration_and_sequence_within_sequence_level[event-False-False]
  '''
  patient_id,date,event_type,provider
  1,2023-01-21,EXAM,NURSE
  1,2023-01-22,FOLLOW_UP,RADIOLOGIST
  1,2023-02-28,EXAM,
  1,2023-03-29,FOLLOW_UP,RADIOLOGIST
  1,2023-06-10,VACCINATION,
  1,2023-07-11,VACCINATION,LABORATORY
  1,2023-08-03,EMERGENCY,NURSE
  1,2023-09-15,VACCINATION,SPECIALIST
  1,2023-12-11,CONSULTATION,NURSE
  1,2023-12-15,EMERGENCY,
  1,2023-12-26,EMERGENCY,
  2,2023-02-19,VACCINATION,SPECIALIST
  2,2023-02-23,EXAM,RADIOLOGIST
  2,2023-02-24,VACCINATION,GENERAL_PRACTITIONER
  2,2023-03-30,VACCINATION,SPECIALIST
  2,2023-05-11,FOLLOW_UP,NURSE
  2,2023-05-15,FOLLOW_UP,GENERAL_PRACTITIONER
  2,2023-06-16,EXAM,RADIOLOGIST
  2,2023-07-09,FOLLOW_UP,
  2,2023-07-21,VACCINATION,
  2,2023-08-06,VACCINATION,SPECIALIST
  2,2023-09-21,EMERGENCY,GENERAL_PRACTITIONER
  2,2023-09-22,EXAM,LABORATORY
  2,2023-09-28,EMERGENCY,RADIOLOGIST
  2,2023-11-06,FOLLOW_UP,SPECIALIST
  2,2023-12-04,FOLLOW_UP,SPECIALIST
  2,2023-12-06,VACCINATION,RADIOLOGIST
  3,2023-01-28,CONSULTATION,RADIOLOGIST
  3,2023-02-02,FOLLOW_UP,NURSE
  3,2023-02-10,FOLLOW_UP,LABORATORY
  3,2023-03-06,CONSULTATION,
  3,2023-03-22,EMERGENCY,
  3,2023-05-16,EMERGENCY,NURSE
  3,2023-06-21,EMERGENCY,NURSE
  3,2023-08-15,FOLLOW_UP,NURSE
  3,2023-08-19,EXAM,GENERAL_PRACTITIONER
  3,2023-09-09,VACCINATION,RADIOLOGIST
  3,2023-09-14,FOLLOW_UP,SPECIALIST
  3,2023-10-16,EMERGENCY,LABORATORY
  3,2023-12-10,CONSULTATION,RADIOLOGIST
  4,2023-01-29,VACCINATION,LABORATORY
  4,2023-03-27,VACCINATION,SPECIALIST
  4,2023-04-06,VACCINATION,LABORATORY
  4,2023-04-18,VACCINATION,RADIOLOGIST
  4,2023-05-14,VACCINATION,RADIOLOGIST
  4,2023-06-09,EMERGENCY,NURSE
  4,2023-06-19,FOLLOW_UP,GENERAL_PRACTITIONER
  4,2023-06-28,CONSULTATION,RADIOLOGIST
  4,2023-07-26,EXAM,SPECIALIST
  4,2023-08-19,FOLLOW_UP,NURSE
  4,2023-09-12,EMERGENCY,GENERAL_PRACTITIONER
  5,2023-01-02,EXAM,
  5,2023-02-21,VACCINATION,SPECIALIST
  5,2023-02-23,FOLLOW_UP,
  5,2023-03-22,EMERGENCY,
  5,2023-04-08,EMERGENCY,GENERAL_PRACTITIONER
  5,2023-04-23,FOLLOW_UP,GENERAL_PRACTITIONER
  5,2023-05-06,EXAM,LABORATORY
  5,2023-05-17,FOLLOW_UP,
  5,2023-06-01,EMERGENCY,GENERAL_PRACTITIONER
  5,2023-06-21,EXAM,RADIOLOGIST
  5,2023-06-29,CONSULTATION,GENERAL_PRACTITIONER
  5,2023-07-22,EMERGENCY,GENERAL_PRACTITIONER
  5,2023-08-19,CONSULTATION,GENERAL_PRACTITIONER
  5,2023-08-21,EMERGENCY,NURSE
  5,2023-09-12,FOLLOW_UP,RADIOLOGIST
  5,2023-10-10,CONSULTATION,
  5,2023-11-03,EXAM,RADIOLOGIST
  5,2023-11-27,EXAM,RADIOLOGIST
  6,2023-02-06,EMERGENCY,GENERAL_PRACTITIONER
  6,2023-03-01,CONSULTATION,SPECIALIST
  6,2023-04-22,CONSULTATION,RADIOLOGIST
  6,2023-05-04,EMERGENCY,LABORATORY
  6,2023-05-08,EXAM,
  6,2023-05-28,VACCINATION,GENERAL_PRACTITIONER
  6,2023-05-31,EXAM,
  6,2023-08-21,EMERGENCY,NURSE
  6,2023-09-16,VACCINATION,RADIOLOGIST
  6,2023-09-20,VACCINATION,SPECIALIST
  6,2023-09-24,VACCINATION,GENERAL_PRACTITIONER
  6,2023-10-31,VACCINATION,LABORATORY
  6,2023-12-12,EMERGENCY,NURSE
  7,2023-03-16,CONSULTATION,RADIOLOGIST
  7,2023-04-14,VACCINATION,NURSE
  7,2023-04-22,CONSULTATION,NURSE
  7,2023-06-01,CONSULTATION,RADIOLOGIST
  7,2023-06-02,FOLLOW_UP,SPECIALIST
  7,2023-07-27,FOLLOW_UP,GENERAL_PRACTITIONER
  7,2023-12-04,EXAM,
  8,2023-01-22,FOLLOW_UP,NURSE
  8,2023-05-08,CONSULTATION,
  8,2023-06-10,VACCINATION,
  8,2023-08-14,FOLLOW_UP,GENERAL_PRACTITIONER
  8,2023-09-21,EMERGENCY,
  8,2023-10-04,VACCINATION,NURSE
  8,2023-10-11,CONSULTATION,LABORATORY
  8,2023-11-13,EMERGENCY,
  9,2023-02-15,FOLLOW_UP,NURSE
  9,2023-06-21,VACCINATION,LABORATORY
  9,2023-07-07,CONSULTATION,RADIOLOGIST
  9,2023-07-10,FOLLOW_UP,LABORATORY
  9,2023-07-11,CONSULTATION,GENERAL_PRACTITIONER
  9,2023-08-21,FOLLOW_UP,LABORATORY
  9,2023-10-29,FOLLOW_UP,NURSE
  10,2023-02-05,FOLLOW_UP,RADIOLOGIST
  10,2023-05-07,EMERGENCY,SPECIALIST
  10,2023-06-10,EMERGENCY,SPECIALIST
  10,2023-09-04,EXAM,NURSE
  10,2023-09-30,CONSULTATION,GENERAL_PRACTITIONER
  10,2023-10-08,EXAM,SPECIALIST
  10,2023-10-26,FOLLOW_UP,SPECIALIST
  10,2023-11-02,CONSULTATION,LABORATORY
  10,2023-11-12,EXAM,GENERAL_PRACTITIONER
  10,2023-11-17,VACCINATION,NURSE
  10,2023-11-19,EXAM,SPECIALIST
  
  '''
# ---
# name: TestTimeCriterion.test_combined_duration_and_sequence_within_sequence_level[event-False-False].1
  '''
  patient_id,gender,age,insurance,chronic_condition
  1,F,81,PUBLIC,True
  2,M,31,PRIVATE,False
  3,M,22,MIXED,False
  4,F,79,PUBLIC,False
  5,M,35,MIXED,False
  6,F,68,PUBLIC,False
  7,M,80,MIXED,False
  8,M,83,PRIVATE,True
  9,F,68,MIXED,True
  10,F,84,MIXED,False
  
  '''
# ---
# name: TestTimeCriterion.test_combined_duration_and_sequence_within_sequence_level[event-False-True]
  '''
  patient_id,date,event_type,provider
  4,2023-01-29,VACCINATION,LABORATORY
  4,2023-03-27,VACCINATION,SPECIALIST
  4,2023-04-06,VACCINATION,LABORATORY
  4,2023-04-18,VACCINATION,RADIOLOGIST
  4,2023-05-14,VACCINATION,RADIOLOGIST
  4,2023-06-09,EMERGENCY,NURSE
  4,2023-06-19,FOLLOW_UP,GENERAL_PRACTITIONER
  4,2023-06-28,CONSULTATION,RADIOLOGIST
  4,2023-07-26,EXAM,SPECIALIST
  4,2023-08-19,FOLLOW_UP,NURSE
  4,2023-09-12,EMERGENCY,GENERAL_PRACTITIONER
  
  '''
# ---
# name: TestTimeCriterion.test_combined_duration_and_sequence_within_sequence_level[event-False-True].1
  '''
  patient_id,gender,age,insurance,chronic_condition
  4,F,79,PUBLIC,False
  
  '''
# ---
# name: TestTimeCriterion.test_combined_duration_and_sequence_within_sequence_level[event-True-False]
  '''
  patient_id,date,event_type,provider
  1,2023-01-21,EXAM,NURSE
  1,2023-01-22,FOLLOW_UP,RADIOLOGIST
  1,2023-02-28,EXAM,
  1,2023-03-29,FOLLOW_UP,RADIOLOGIST
  1,2023-06-10,VACCINATION,
  1,2023-07-11,VACCINATION,LABORATORY
  1,2023-08-03,EMERGENCY,NURSE
  1,2023-09-15,VACCINATION,SPECIALIST
  1,2023-12-11,CONSULTATION,NURSE
  1,2023-12-15,EMERGENCY,
  1,2023-12-26,EMERGENCY,
  2,2023-02-19,VACCINATION,SPECIALIST
  2,2023-02-23,EXAM,RADIOLOGIST
  2,2023-02-24,VACCINATION,GENERAL_PRACTITIONER
  2,2023-03-30,VACCINATION,SPECIALIST
  2,2023-05-11,FOLLOW_UP,NURSE
  2,2023-05-15,FOLLOW_UP,GENERAL_PRACTITIONER
  2,2023-06-16,EXAM,RADIOLOGIST
  2,2023-07-09,FOLLOW_UP,
  2,2023-07-21,VACCINATION,
  2,2023-08-06,VACCINATION,SPECIALIST
  2,2023-09-21,EMERGENCY,GENERAL_PRACTITIONER
  2,2023-09-22,EXAM,LABORATORY
  2,2023-09-28,EMERGENCY,RADIOLOGIST
  2,2023-11-06,FOLLOW_UP,SPECIALIST
  2,2023-12-04,FOLLOW_UP,SPECIALIST
  2,2023-12-06,VACCINATION,RADIOLOGIST
  3,2023-01-28,CONSULTATION,RADIOLOGIST
  3,2023-02-02,FOLLOW_UP,NURSE
  3,2023-02-10,FOLLOW_UP,LABORATORY
  3,2023-03-06,CONSULTATION,
  3,2023-03-22,EMERGENCY,
  3,2023-05-16,EMERGENCY,NURSE
  3,2023-06-21,EMERGENCY,NURSE
  3,2023-08-15,FOLLOW_UP,NURSE
  3,2023-08-19,EXAM,GENERAL_PRACTITIONER
  3,2023-09-09,VACCINATION,RADIOLOGIST
  3,2023-09-14,FOLLOW_UP,SPECIALIST
  3,2023-10-16,EMERGENCY,LABORATORY
  3,2023-12-10,CONSULTATION,RADIOLOGIST
  4,2023-01-29,VACCINATION,LABORATORY
  4,2023-03-27,VACCINATION,SPECIALIST
  4,2023-04-06,VACCINATION,LABORATORY
  4,2023-04-18,VACCINATION,RADIOLOGIST
  4,2023-05-14,VACCINATION,RADIOLOGIST
  4,2023-06-09,EMERGENCY,NURSE
  4,2023-06-19,FOLLOW_UP,GENERAL_PRACTITIONER
  4,2023-06-28,CONSULTATION,RADIOLOGIST
  4,2023-07-26,EXAM,SPECIALIST
  4,2023-08-19,FOLLOW_UP,NURSE
  4,2023-09-12,EMERGENCY,GENERAL_PRACTITIONER
  5,2023-01-02,EXAM,
  5,2023-02-21,VACCINATION,SPECIALIST
  5,2023-02-23,FOLLOW_UP,
  5,2023-03-22,EMERGENCY,
  5,2023-04-08,EMERGENCY,GENERAL_PRACTITIONER
  5,2023-04-23,FOLLOW_UP,GENERAL_PRACTITIONER
  5,2023-05-06,EXAM,LABORATORY
  5,2023-05-17,FOLLOW_UP,
  5,2023-06-01,EMERGENCY,GENERAL_PRACTITIONER
  5,2023-06-21,EXAM,RADIOLOGIST
  5,2023-06-29,CONSULTATION,GENERAL_PRACTITIONER
  5,2023-07-22,EMERGENCY,GENERAL_PRACTITIONER
  5,2023-08-19,CONSULTATION,GENERAL_PRACTITIONER
  5,2023-08-21,EMERGENCY,NURSE
  5,2023-09-12,FOLLOW_UP,RADIOLOGIST
  5,2023-10-10,CONSULTATION,
  5,2023-11-03,EXAM,RADIOLOGIST
  5,2023-11-27,EXAM,RADIOLOGIST
  6,2023-02-06,EMERGENCY,GENERAL_PRACTITIONER
  6,2023-03-01,CONSULTATION,SPECIALIST
  6,2023-04-22,CONSULTATION,RADIOLOGIST
  6,2023-05-04,EMERGENCY,LABORATORY
  6,2023-05-08,EXAM,
  6,2023-05-28,VACCINATION,GENERAL_PRACTITIONER
  6,2023-05-31,EXAM,
  6,2023-08-21,EMERGENCY,NURSE
  6,2023-09-16,VACCINATION,RADIOLOGIST
  6,2023-09-20,VACCINATION,SPECIALIST
  6,2023-09-24,VACCINATION,GENERAL_PRACTITIONER
  6,2023-10-31,VACCINATION,LABORATORY
  6,2023-12-12,EMERGENCY,NURSE
  7,2023-03-16,CONSULTATION,RADIOLOGIST
  7,2023-04-14,VACCINATION,NURSE
  7,2023-04-22,CONSULTATION,NURSE
  7,2023-06-01,CONSULTATION,RADIOLOGIST
  7,2023-06-02,FOLLOW_UP,SPECIALIST
  7,2023-07-27,FOLLOW_UP,GENERAL_PRACTITIONER
  7,2023-12-04,EXAM,
  8,2023-01-22,FOLLOW_UP,NURSE
  8,2023-05-08,CONSULTATION,
  8,2023-06-10,VACCINATION,
  8,2023-08-14,FOLLOW_UP,GENERAL_PRACTITIONER
  8,2023-09-21,EMERGENCY,
  8,2023-10-04,VACCINATION,NURSE
  8,2023-10-11,CONSULTATION,LABORATORY
  8,2023-11-13,EMERGENCY,
  9,2023-02-15,FOLLOW_UP,NURSE
  9,2023-06-21,VACCINATION,LABORATORY
  9,2023-07-07,CONSULTATION,RADIOLOGIST
  9,2023-07-10,FOLLOW_UP,LABORATORY
  9,2023-07-11,CONSULTATION,GENERAL_PRACTITIONER
  9,2023-08-21,FOLLOW_UP,LABORATORY
  9,2023-10-29,FOLLOW_UP,NURSE
  10,2023-02-05,FOLLOW_UP,RADIOLOGIST
  10,2023-05-07,EMERGENCY,SPECIALIST
  10,2023-06-10,EMERGENCY,SPECIALIST
  10,2023-09-04,EXAM,NURSE
  10,2023-09-30,CONSULTATION,GENERAL_PRACTITIONER
  10,2023-10-08,EXAM,SPECIALIST
  10,2023-10-26,FOLLOW_UP,SPECIALIST
  10,2023-11-02,CONSULTATION,LABORATORY
  10,2023-11-12,EXAM,GENERAL_PRACTITIONER
  10,2023-11-17,VACCINATION,NURSE
  10,2023-11-19,EXAM,SPECIALIST
  
  '''
# ---
# name: TestTimeCriterion.test_combined_duration_and_sequence_within_sequence_level[event-True-False].1
  '''
  patient_id,gender,age,insurance,chronic_condition
  1,F,81,PUBLIC,True
  2,M,31,PRIVATE,False
  3,M,22,MIXED,False
  4,F,79,PUBLIC,False
  5,M,35,MIXED,False
  6,F,68,PUBLIC,False
  7,M,80,MIXED,False
  8,M,83,PRIVATE,True
  9,F,68,MIXED,True
  10,F,84,MIXED,False
  
  '''
# ---
# name: TestTimeCriterion.test_combined_duration_and_sequence_within_sequence_level[event-True-True]
  '''
  patient_id,date,event_type,provider
  4,2023-01-29,VACCINATION,LABORATORY
  4,2023-03-27,VACCINATION,SPECIALIST
  4,2023-04-06,VACCINATION,LABORATORY
  4,2023-04-18,VACCINATION,RADIOLOGIST
  4,2023-05-14,VACCINATION,RADIOLOGIST
  4,2023-06-09,EMERGENCY,NURSE
  4,2023-06-19,FOLLOW_UP,GENERAL_PRACTITIONER
  4,2023-06-28,CONSULTATION,RADIOLOGIST
  4,2023-07-26,EXAM,SPECIALIST
  4,2023-08-19,FOLLOW_UP,NURSE
  4,2023-09-12,EMERGENCY,GENERAL_PRACTITIONER
  
  '''
# ---
# name: TestTimeCriterion.test_combined_duration_and_sequence_within_sequence_level[event-True-True].1
  '''
  patient_id,gender,age,insurance,chronic_condition
  4,F,79,PUBLIC,False
  
  '''
# ---
# name: TestTimeCriterion.test_combined_duration_and_sequence_within_sequence_level[interval-False-False]
  '''
  patient_id,start_date,end_date,medication,administration_route,dosage
  1,2023-01-08,2023-01-18,PAIN_RELIEVER,,2
  1,2023-01-12,2023-01-28,ANTICOAGULANT,CUTANEOUS,1
  1,2023-01-20,2023-02-13,ANTIBIOTIC,ORAL,2
  1,2023-05-23,2023-05-30,ANTIHYPERTENSIVE,INTRAVENOUS,3
  1,2023-09-09,2023-09-20,ANTICOAGULANT,INTRAVENOUS,3
  2,2023-01-05,2023-02-03,ANTIBIOTIC,ORAL,2
  2,2023-01-10,2023-02-09,PAIN_RELIEVER,,1
  2,2023-02-04,2023-02-16,PAIN_RELIEVER,INTRAVENOUS,1
  2,2023-05-25,2023-06-09,ANTIBIOTIC,INHALATION,1
  2,2023-08-08,2023-08-19,ANTIBIOTIC,CUTANEOUS,3
  2,2023-08-08,2023-08-30,ANTIHYPERTENSIVE,INHALATION,2
  3,2023-04-15,2023-04-24,ANTIBIOTIC,INHALATION,3
  3,2023-09-24,2023-10-21,PAIN_RELIEVER,ORAL,2
  3,2023-10-10,2023-11-02,ANTIHYPERTENSIVE,ORAL,2
  4,2023-02-22,2023-03-05,PAIN_RELIEVER,INTRAMUSCULAR,3
  4,2023-05-25,2023-06-21,ANTIBIOTIC,ORAL,3
  4,2023-06-11,2023-07-09,CORTICOSTEROID,INTRAVENOUS,2
  4,2023-06-22,2023-07-11,ANTICOAGULANT,ORAL,1
  4,2023-07-16,2023-07-27,CORTICOSTEROID,INHALATION,3
  4,2023-10-15,2023-10-23,ANTICOAGULANT,INTRAMUSCULAR,2
  5,2023-02-23,2023-03-13,ANTIHYPERTENSIVE,INTRAVENOUS,1
  5,2023-03-07,2023-03-24,CORTICOSTEROID,CUTANEOUS,2
  5,2023-04-22,2023-05-13,ANTIHYPERTENSIVE,INHALATION,2
  5,2023-09-04,2023-09-20,CORTICOSTEROID,,1
  5,2023-09-06,2023-09-18,ANTIBIOTIC,CUTANEOUS,2
  5,2023-10-21,2023-11-14,PAIN_RELIEVER,INTRAMUSCULAR,2
  6,2023-03-02,2023-03-27,CORTICOSTEROID,INHALATION,1
  6,2023-03-10,2023-03-18,ANTIHYPERTENSIVE,INTRAMUSCULAR,1
  6,2023-04-02,2023-04-18,ANTIHYPERTENSIVE,INHALATION,2
  6,2023-04-21,2023-05-20,CORTICOSTEROID,CUTANEOUS,1
  6,2023-05-06,2023-05-23,CORTICOSTEROID,INTRAVENOUS,3
  6,2023-05-18,2023-06-17,ANTIBIOTIC,INTRAMUSCULAR,1
  6,2023-07-14,2023-07-23,CORTICOSTEROID,INHALATION,2
  7,2023-02-03,2023-02-26,PAIN_RELIEVER,INHALATION,3
  7,2023-03-14,2023-04-04,ANTIBIOTIC,,3
  7,2023-05-13,2023-05-28,ANTICOAGULANT,INTRAMUSCULAR,2
  8,2023-01-14,2023-02-13,CORTICOSTEROID,,3
  8,2023-01-26,2023-02-05,ANTIBIOTIC,ORAL,3
  8,2023-01-28,2023-02-13,ANTIBIOTIC,ORAL,3
  8,2023-03-19,2023-04-18,PAIN_RELIEVER,INHALATION,2
  8,2023-08-26,2023-09-12,ANTICOAGULANT,INHALATION,2
  8,2023-09-10,2023-10-06,PAIN_RELIEVER,CUTANEOUS,3
  8,2023-10-21,2023-10-30,CORTICOSTEROID,ORAL,3
  9,2023-04-19,2023-05-13,ANTICOAGULANT,INTRAMUSCULAR,3
  9,2023-05-06,2023-05-24,ANTIBIOTIC,ORAL,1
  9,2023-07-31,2023-08-10,PAIN_RELIEVER,INTRAVENOUS,1
  9,2023-09-21,2023-10-05,ANTIBIOTIC,CUTANEOUS,3
  10,2023-03-11,2023-04-09,ANTICOAGULANT,INTRAVENOUS,2
  10,2023-04-05,2023-05-05,ANTIBIOTIC,INTRAVENOUS,3
  10,2023-04-11,2023-04-23,ANTICOAGULANT,INTRAMUSCULAR,2
  10,2023-08-17,2023-08-24,ANTIHYPERTENSIVE,INHALATION,2
  
  '''
# ---
# name: TestTimeCriterion.test_combined_duration_and_sequence_within_sequence_level[interval-False-False].1
  '''
  patient_id,gender,age,insurance,chronic_condition
  1,F,81,PUBLIC,True
  2,M,31,PRIVATE,False
  3,M,22,MIXED,False
  4,F,79,PUBLIC,False
  5,M,35,MIXED,False
  6,F,68,PUBLIC,False
  7,M,80,MIXED,False
  8,M,83,PRIVATE,True
  9,F,68,MIXED,True
  10,F,84,MIXED,False
  
  '''
# ---
# name: TestTimeCriterion.test_combined_duration_and_sequence_within_sequence_level[interval-False-True]
  '''
  patient_id,start_date,end_date,medication,administration_route,dosage
  1,2023-01-08,2023-01-18,PAIN_RELIEVER,,2
  1,2023-01-12,2023-01-28,ANTICOAGULANT,CUTANEOUS,1
  1,2023-01-20,2023-02-13,ANTIBIOTIC,ORAL,2
  1,2023-05-23,2023-05-30,ANTIHYPERTENSIVE,INTRAVENOUS,3
  1,2023-09-09,2023-09-20,ANTICOAGULANT,INTRAVENOUS,3
  2,2023-01-05,2023-02-03,ANTIBIOTIC,ORAL,2
  2,2023-01-10,2023-02-09,PAIN_RELIEVER,,1
  2,2023-02-04,2023-02-16,PAIN_RELIEVER,INTRAVENOUS,1
  2,2023-05-25,2023-06-09,ANTIBIOTIC,INHALATION,1
  2,2023-08-08,2023-08-19,ANTIBIOTIC,CUTANEOUS,3
  2,2023-08-08,2023-08-30,ANTIHYPERTENSIVE,INHALATION,2
  6,2023-03-02,2023-03-27,CORTICOSTEROID,INHALATION,1
  6,2023-03-10,2023-03-18,ANTIHYPERTENSIVE,INTRAMUSCULAR,1
  6,2023-04-02,2023-04-18,ANTIHYPERTENSIVE,INHALATION,2
  6,2023-04-21,2023-05-20,CORTICOSTEROID,CUTANEOUS,1
  6,2023-05-06,2023-05-23,CORTICOSTEROID,INTRAVENOUS,3
  6,2023-05-18,2023-06-17,ANTIBIOTIC,INTRAMUSCULAR,1
  6,2023-07-14,2023-07-23,CORTICOSTEROID,INHALATION,2
  7,2023-02-03,2023-02-26,PAIN_RELIEVER,INHALATION,3
  7,2023-03-14,2023-04-04,ANTIBIOTIC,,3
  7,2023-05-13,2023-05-28,ANTICOAGULANT,INTRAMUSCULAR,2
  9,2023-04-19,2023-05-13,ANTICOAGULANT,INTRAMUSCULAR,3
  9,2023-05-06,2023-05-24,ANTIBIOTIC,ORAL,1
  9,2023-07-31,2023-08-10,PAIN_RELIEVER,INTRAVENOUS,1
  9,2023-09-21,2023-10-05,ANTIBIOTIC,CUTANEOUS,3
  10,2023-03-11,2023-04-09,ANTICOAGULANT,INTRAVENOUS,2
  10,2023-04-05,2023-05-05,ANTIBIOTIC,INTRAVENOUS,3
  10,2023-04-11,2023-04-23,ANTICOAGULANT,INTRAMUSCULAR,2
  10,2023-08-17,2023-08-24,ANTIHYPERTENSIVE,INHALATION,2
  
  '''
# ---
# name: TestTimeCriterion.test_combined_duration_and_sequence_within_sequence_level[interval-False-True].1
  '''
  patient_id,gender,age,insurance,chronic_condition
  1,F,81,PUBLIC,True
  2,M,31,PRIVATE,False
  6,F,68,PUBLIC,False
  7,M,80,MIXED,False
  9,F,68,MIXED,True
  10,F,84,MIXED,False
  
  '''
# ---
# name: TestTimeCriterion.test_combined_duration_and_sequence_within_sequence_level[interval-True-False]
  '''
  patient_id,start_date,end_date,medication,administration_route,dosage
  1,2023-01-08,2023-01-18,PAIN_RELIEVER,,2
  1,2023-01-12,2023-01-28,ANTICOAGULANT,CUTANEOUS,1
  1,2023-01-20,2023-02-13,ANTIBIOTIC,ORAL,2
  1,2023-05-23,2023-05-30,ANTIHYPERTENSIVE,INTRAVENOUS,3
  1,2023-09-09,2023-09-20,ANTICOAGULANT,INTRAVENOUS,3
  2,2023-01-05,2023-02-03,ANTIBIOTIC,ORAL,2
  2,2023-01-10,2023-02-09,PAIN_RELIEVER,,1
  2,2023-02-04,2023-02-16,PAIN_RELIEVER,INTRAVENOUS,1
  2,2023-05-25,2023-06-09,ANTIBIOTIC,INHALATION,1
  2,2023-08-08,2023-08-19,ANTIBIOTIC,CUTANEOUS,3
  2,2023-08-08,2023-08-30,ANTIHYPERTENSIVE,INHALATION,2
  3,2023-04-15,2023-04-24,ANTIBIOTIC,INHALATION,3
  3,2023-09-24,2023-10-21,PAIN_RELIEVER,ORAL,2
  3,2023-10-10,2023-11-02,ANTIHYPERTENSIVE,ORAL,2
  4,2023-02-22,2023-03-05,PAIN_RELIEVER,INTRAMUSCULAR,3
  4,2023-05-25,2023-06-21,ANTIBIOTIC,ORAL,3
  4,2023-06-11,2023-07-09,CORTICOSTEROID,INTRAVENOUS,2
  4,2023-06-22,2023-07-11,ANTICOAGULANT,ORAL,1
  4,2023-07-16,2023-07-27,CORTICOSTEROID,INHALATION,3
  4,2023-10-15,2023-10-23,ANTICOAGULANT,INTRAMUSCULAR,2
  5,2023-02-23,2023-03-13,ANTIHYPERTENSIVE,INTRAVENOUS,1
  5,2023-03-07,2023-03-24,CORTICOSTEROID,CUTANEOUS,2
  5,2023-04-22,2023-05-13,ANTIHYPERTENSIVE,INHALATION,2
  5,2023-09-04,2023-09-20,CORTICOSTEROID,,1
  5,2023-09-06,2023-09-18,ANTIBIOTIC,CUTANEOUS,2
  5,2023-10-21,2023-11-14,PAIN_RELIEVER,INTRAMUSCULAR,2
  6,2023-03-02,2023-03-27,CORTICOSTEROID,INHALATION,1
  6,2023-03-10,2023-03-18,ANTIHYPERTENSIVE,INTRAMUSCULAR,1
  6,2023-04-02,2023-04-18,ANTIHYPERTENSIVE,INHALATION,2
  6,2023-04-21,2023-05-20,CORTICOSTEROID,CUTANEOUS,1
  6,2023-05-06,2023-05-23,CORTICOSTEROID,INTRAVENOUS,3
  6,2023-05-18,2023-06-17,ANTIBIOTIC,INTRAMUSCULAR,1
  6,2023-07-14,2023-07-23,CORTICOSTEROID,INHALATION,2
  7,2023-02-03,2023-02-26,PAIN_RELIEVER,INHALATION,3
  7,2023-03-14,2023-04-04,ANTIBIOTIC,,3
  7,2023-05-13,2023-05-28,ANTICOAGULANT,INTRAMUSCULAR,2
  8,2023-01-14,2023-02-13,CORTICOSTEROID,,3
  8,2023-01-26,2023-02-05,ANTIBIOTIC,ORAL,3
  8,2023-01-28,2023-02-13,ANTIBIOTIC,ORAL,3
  8,2023-03-19,2023-04-18,PAIN_RELIEVER,INHALATION,2
  8,2023-08-26,2023-09-12,ANTICOAGULANT,INHALATION,2
  8,2023-09-10,2023-10-06,PAIN_RELIEVER,CUTANEOUS,3
  8,2023-10-21,2023-10-30,CORTICOSTEROID,ORAL,3
  9,2023-04-19,2023-05-13,ANTICOAGULANT,INTRAMUSCULAR,3
  9,2023-05-06,2023-05-24,ANTIBIOTIC,ORAL,1
  9,2023-07-31,2023-08-10,PAIN_RELIEVER,INTRAVENOUS,1
  9,2023-09-21,2023-10-05,ANTIBIOTIC,CUTANEOUS,3
  10,2023-03-11,2023-04-09,ANTICOAGULANT,INTRAVENOUS,2
  10,2023-04-05,2023-05-05,ANTIBIOTIC,INTRAVENOUS,3
  10,2023-04-11,2023-04-23,ANTICOAGULANT,INTRAMUSCULAR,2
  10,2023-08-17,2023-08-24,ANTIHYPERTENSIVE,INHALATION,2
  
  '''
# ---
# name: TestTimeCriterion.test_combined_duration_and_sequence_within_sequence_level[interval-True-False].1
  '''
  patient_id,gender,age,insurance,chronic_condition
  1,F,81,PUBLIC,True
  2,M,31,PRIVATE,False
  3,M,22,MIXED,False
  4,F,79,PUBLIC,False
  5,M,35,MIXED,False
  6,F,68,PUBLIC,False
  7,M,80,MIXED,False
  8,M,83,PRIVATE,True
  9,F,68,MIXED,True
  10,F,84,MIXED,False
  
  '''
# ---
# name: TestTimeCriterion.test_combined_duration_and_sequence_within_sequence_level[interval-True-True]
  '''
  patient_id,start_date,end_date,medication,administration_route,dosage
  1,2023-01-08,2023-01-18,PAIN_RELIEVER,,2
  1,2023-01-12,2023-01-28,ANTICOAGULANT,CUTANEOUS,1
  1,2023-01-20,2023-02-13,ANTIBIOTIC,ORAL,2
  1,2023-05-23,2023-05-30,ANTIHYPERTENSIVE,INTRAVENOUS,3
  1,2023-09-09,2023-09-20,ANTICOAGULANT,INTRAVENOUS,3
  2,2023-01-05,2023-02-03,ANTIBIOTIC,ORAL,2
  2,2023-01-10,2023-02-09,PAIN_RELIEVER,,1
  2,2023-02-04,2023-02-16,PAIN_RELIEVER,INTRAVENOUS,1
  2,2023-05-25,2023-06-09,ANTIBIOTIC,INHALATION,1
  2,2023-08-08,2023-08-19,ANTIBIOTIC,CUTANEOUS,3
  2,2023-08-08,2023-08-30,ANTIHYPERTENSIVE,INHALATION,2
  6,2023-03-02,2023-03-27,CORTICOSTEROID,INHALATION,1
  6,2023-03-10,2023-03-18,ANTIHYPERTENSIVE,INTRAMUSCULAR,1
  6,2023-04-02,2023-04-18,ANTIHYPERTENSIVE,INHALATION,2
  6,2023-04-21,2023-05-20,CORTICOSTEROID,CUTANEOUS,1
  6,2023-05-06,2023-05-23,CORTICOSTEROID,INTRAVENOUS,3
  6,2023-05-18,2023-06-17,ANTIBIOTIC,INTRAMUSCULAR,1
  6,2023-07-14,2023-07-23,CORTICOSTEROID,INHALATION,2
  7,2023-02-03,2023-02-26,PAIN_RELIEVER,INHALATION,3
  7,2023-03-14,2023-04-04,ANTIBIOTIC,,3
  7,2023-05-13,2023-05-28,ANTICOAGULANT,INTRAMUSCULAR,2
  10,2023-03-11,2023-04-09,ANTICOAGULANT,INTRAVENOUS,2
  10,2023-04-05,2023-05-05,ANTIBIOTIC,INTRAVENOUS,3
  10,2023-04-11,2023-04-23,ANTICOAGULANT,INTRAMUSCULAR,2
  10,2023-08-17,2023-08-24,ANTIHYPERTENSIVE,INHALATION,2
  
  '''
# ---
# name: TestTimeCriterion.test_combined_duration_and_sequence_within_sequence_level[interval-True-True].1
  '''
  patient_id,gender,age,insurance,chronic_condition
  1,F,81,PUBLIC,True
  2,M,31,PRIVATE,False
  6,F,68,PUBLIC,False
  7,M,80,MIXED,False
  10,F,84,MIXED,False
  
  '''
# ---
# name: TestTimeCriterion.test_combined_duration_and_sequence_within_sequence_level[state-False-False]
  '''
  patient_id,start_date,end_date,health_state,condition
  1,2023-01-01,2023-12-16,HEALTHY,DIGESTIVE
  1,2023-12-16,2023-12-31,HEALTHY,
  2,2023-01-01,2023-12-16,HEALTHY,CARDIAC
  2,2023-12-16,2023-12-31,CHRONIC_MONITORING,CARDIAC
  3,2023-01-01,2023-04-05,CONVALESCENCE,CARDIAC
  3,2023-04-05,2023-12-15,CHRONIC_MONITORING,NEUROLOGICAL
  3,2023-12-15,2023-12-31,REMISSION,CARDIAC
  4,2023-01-01,2023-06-08,CHRONIC_MONITORING,NEUROLOGICAL
  4,2023-06-08,2023-07-18,CONVALESCENCE,
  4,2023-07-18,2023-12-14,REMISSION,DIGESTIVE
  4,2023-12-14,2023-12-31,CONVALESCENCE,
  5,2023-01-01,2023-12-16,CONVALESCENCE,DIGESTIVE
  5,2023-12-16,2023-12-31,CHRONIC_MONITORING,DIGESTIVE
  6,2023-01-01,2023-03-09,REMISSION,DIGESTIVE
  6,2023-03-09,2023-08-16,TREATMENT,RESPIRATORY
  6,2023-08-16,2023-12-14,TREATMENT,DIGESTIVE
  6,2023-12-14,2023-12-31,CONVALESCENCE,DIGESTIVE
  7,2023-01-01,2023-05-28,HEALTHY,RESPIRATORY
  7,2023-05-28,2023-07-19,TREATMENT,NEUROLOGICAL
  7,2023-07-19,2023-12-14,HEALTHY,DIGESTIVE
  7,2023-12-14,2023-12-31,REMISSION,RESPIRATORY
  8,2023-01-01,2023-12-16,CONVALESCENCE,RESPIRATORY
  8,2023-12-16,2023-12-31,TREATMENT,
  9,2023-01-01,2023-12-16,CONVALESCENCE,DIGESTIVE
  9,2023-12-16,2023-12-31,HEALTHY,
  10,2023-01-01,2023-12-16,HEALTHY,DIGESTIVE
  10,2023-12-16,2023-12-31,CHRONIC_MONITORING,NEUROLOGICAL
  
  '''
# ---
# name: TestTimeCriterion.test_combined_duration_and_sequence_within_sequence_level[state-False-False].1
  '''
  patient_id,gender,age,insurance,chronic_condition
  1,F,81,PUBLIC,True
  2,M,31,PRIVATE,False
  3,M,22,MIXED,False
  4,F,79,PUBLIC,False
  5,M,35,MIXED,False
  6,F,68,PUBLIC,False
  7,M,80,MIXED,False
  8,M,83,PRIVATE,True
  9,F,68,MIXED,True
  10,F,84,MIXED,False
  
  '''
# ---
# name: TestTimeCriterion.test_combined_duration_and_sequence_within_sequence_level[state-False-True]
  '''
  patient_id,start_date,end_date,health_state,condition
  
  '''
# ---
# name: TestTimeCriterion.test_combined_duration_and_sequence_within_sequence_level[state-False-True].1
  '''
  patient_id,gender,age,insurance,chronic_condition
  
  '''
# ---
# name: TestTimeCriterion.test_combined_duration_and_sequence_within_sequence_level[state-True-False]
  '''
  patient_id,start_date,end_date,health_state,condition
  3,2023-01-01,2023-04-05,CONVALESCENCE,CARDIAC
  3,2023-04-05,2023-12-15,CHRONIC_MONITORING,NEUROLOGICAL
  3,2023-12-15,2023-12-31,REMISSION,CARDIAC
  4,2023-01-01,2023-06-08,CHRONIC_MONITORING,NEUROLOGICAL
  4,2023-06-08,2023-07-18,CONVALESCENCE,
  4,2023-07-18,2023-12-14,REMISSION,DIGESTIVE
  4,2023-12-14,2023-12-31,CONVALESCENCE,
  6,2023-01-01,2023-03-09,REMISSION,DIGESTIVE
  6,2023-03-09,2023-08-16,TREATMENT,RESPIRATORY
  6,2023-08-16,2023-12-14,TREATMENT,DIGESTIVE
  6,2023-12-14,2023-12-31,CONVALESCENCE,DIGESTIVE
  7,2023-01-01,2023-05-28,HEALTHY,RESPIRATORY
  7,2023-05-28,2023-07-19,TREATMENT,NEUROLOGICAL
  7,2023-07-19,2023-12-14,HEALTHY,DIGESTIVE
  7,2023-12-14,2023-12-31,REMISSION,RESPIRATORY
  
  '''
# ---
# name: TestTimeCriterion.test_combined_duration_and_sequence_within_sequence_level[state-True-False].1
  '''
  patient_id,gender,age,insurance,chronic_condition
  3,M,22,MIXED,False
  4,F,79,PUBLIC,False
  6,F,68,PUBLIC,False
  7,M,80,MIXED,False
  
  '''
# ---
# name: TestTimeCriterion.test_combined_duration_and_sequence_within_sequence_level[state-True-True]
  '''
  patient_id,start_date,end_date,health_state,condition
  
  '''
# ---
# name: TestTimeCriterion.test_combined_duration_and_sequence_within_sequence_level[state-True-True].1
  '''
  patient_id,gender,age,insurance,chronic_condition
  
  '''
# ---
# name: TestTimeCriterion.test_filter_entity_level_duration_within[event-False-False]
  '''
  patient_id,date,event_type,provider
  4,2023-04-06,VACCINATION,LABORATORY
  4,2023-04-18,VACCINATION,RADIOLOGIST
  5,2023-04-08,EMERGENCY,GENERAL_PRACTITIONER
  5,2023-04-23,FOLLOW_UP,GENERAL_PRACTITIONER
  6,2023-04-22,CONSULTATION,RADIOLOGIST
  7,2023-04-14,VACCINATION,NURSE
  7,2023-04-22,CONSULTATION,NURSE
  
  '''
# ---
# name: TestTimeCriterion.test_filter_entity_level_duration_within[event-False-True]
  '''
  patient_id,date,event_type,provider
  4,2023-04-06,VACCINATION,LABORATORY
  4,2023-04-18,VACCINATION,RADIOLOGIST
  5,2023-04-08,EMERGENCY,GENERAL_PRACTITIONER
  5,2023-04-23,FOLLOW_UP,GENERAL_PRACTITIONER
  6,2023-04-22,CONSULTATION,RADIOLOGIST
  7,2023-04-14,VACCINATION,NURSE
  7,2023-04-22,CONSULTATION,NURSE
  
  '''
# ---
# name: TestTimeCriterion.test_filter_entity_level_duration_within[event-True-False]
  '''
  patient_id,date,event_type,provider
  4,2023-04-06,VACCINATION,LABORATORY
  4,2023-04-18,VACCINATION,RADIOLOGIST
  5,2023-04-08,EMERGENCY,GENERAL_PRACTITIONER
  5,2023-04-23,FOLLOW_UP,GENERAL_PRACTITIONER
  6,2023-04-22,CONSULTATION,RADIOLOGIST
  7,2023-04-14,VACCINATION,NURSE
  7,2023-04-22,CONSULTATION,NURSE
  
  '''
# ---
# name: TestTimeCriterion.test_filter_entity_level_duration_within[event-True-True]
  '''
  patient_id,date,event_type,provider
  4,2023-04-06,VACCINATION,LABORATORY
  4,2023-04-18,VACCINATION,RADIOLOGIST
  5,2023-04-08,EMERGENCY,GENERAL_PRACTITIONER
  5,2023-04-23,FOLLOW_UP,GENERAL_PRACTITIONER
  6,2023-04-22,CONSULTATION,RADIOLOGIST
  7,2023-04-14,VACCINATION,NURSE
  7,2023-04-22,CONSULTATION,NURSE
  
  '''
# ---
# name: TestTimeCriterion.test_filter_entity_level_duration_within[interval-False-False]
  '''
  patient_id,start_date,end_date,medication,administration_route,dosage
  3,2023-04-15,2023-04-24,ANTIBIOTIC,INHALATION,3
  5,2023-04-22,2023-05-13,ANTIHYPERTENSIVE,INHALATION,2
  6,2023-04-02,2023-04-18,ANTIHYPERTENSIVE,INHALATION,2
  6,2023-04-21,2023-05-20,CORTICOSTEROID,CUTANEOUS,1
  7,2023-03-14,2023-04-04,ANTIBIOTIC,,3
  8,2023-03-19,2023-04-18,PAIN_RELIEVER,INHALATION,2
  9,2023-04-19,2023-05-13,ANTICOAGULANT,INTRAMUSCULAR,3
  10,2023-03-11,2023-04-09,ANTICOAGULANT,INTRAVENOUS,2
  10,2023-04-05,2023-05-05,ANTIBIOTIC,INTRAVENOUS,3
  10,2023-04-11,2023-04-23,ANTICOAGULANT,INTRAMUSCULAR,2
  
  '''
# ---
# name: TestTimeCriterion.test_filter_entity_level_duration_within[interval-False-True]
  '''
  patient_id,start_date,end_date,medication,administration_route,dosage
  3,2023-04-15,2023-04-24,ANTIBIOTIC,INHALATION,3
  6,2023-04-02,2023-04-18,ANTIHYPERTENSIVE,INHALATION,2
  10,2023-04-11,2023-04-23,ANTICOAGULANT,INTRAMUSCULAR,2
  
  '''
# ---
# name: TestTimeCriterion.test_filter_entity_level_duration_within[interval-True-False]
  '''
  patient_id,start_date,end_date,medication,administration_route,dosage
  3,2023-04-15,2023-04-24,ANTIBIOTIC,INHALATION,3
  5,2023-04-22,2023-05-13,ANTIHYPERTENSIVE,INHALATION,2
  6,2023-04-02,2023-04-18,ANTIHYPERTENSIVE,INHALATION,2
  6,2023-04-21,2023-05-20,CORTICOSTEROID,CUTANEOUS,1
  7,2023-03-14,2023-04-04,ANTIBIOTIC,,3
  8,2023-03-19,2023-04-18,PAIN_RELIEVER,INHALATION,2
  9,2023-04-19,2023-05-13,ANTICOAGULANT,INTRAMUSCULAR,3
  10,2023-03-11,2023-04-09,ANTICOAGULANT,INTRAVENOUS,2
  10,2023-04-05,2023-05-05,ANTIBIOTIC,INTRAVENOUS,3
  10,2023-04-11,2023-04-23,ANTICOAGULANT,INTRAMUSCULAR,2
  
  '''
# ---
# name: TestTimeCriterion.test_filter_entity_level_duration_within[interval-True-True]
  '''
  patient_id,start_date,end_date,medication,administration_route,dosage
  3,2023-04-15,2023-04-24,ANTIBIOTIC,INHALATION,3
  6,2023-04-02,2023-04-18,ANTIHYPERTENSIVE,INHALATION,2
  10,2023-04-11,2023-04-23,ANTICOAGULANT,INTRAMUSCULAR,2
  
  '''
# ---
# name: TestTimeCriterion.test_filter_sequence_level_sequence_within[event-False-False]
  '''
  patient_id,date,event_type,provider
  4,2023-01-29,VACCINATION,LABORATORY
  4,2023-03-27,VACCINATION,SPECIALIST
  4,2023-04-06,VACCINATION,LABORATORY
  4,2023-04-18,VACCINATION,RADIOLOGIST
  4,2023-05-14,VACCINATION,RADIOLOGIST
  4,2023-06-09,EMERGENCY,NURSE
  4,2023-06-19,FOLLOW_UP,GENERAL_PRACTITIONER
  4,2023-06-28,CONSULTATION,RADIOLOGIST
  4,2023-07-26,EXAM,SPECIALIST
  4,2023-08-19,FOLLOW_UP,NURSE
  4,2023-09-12,EMERGENCY,GENERAL_PRACTITIONER
  5,2023-01-02,EXAM,
  5,2023-02-21,VACCINATION,SPECIALIST
  5,2023-02-23,FOLLOW_UP,
  5,2023-03-22,EMERGENCY,
  5,2023-04-08,EMERGENCY,GENERAL_PRACTITIONER
  5,2023-04-23,FOLLOW_UP,GENERAL_PRACTITIONER
  5,2023-05-06,EXAM,LABORATORY
  5,2023-05-17,FOLLOW_UP,
  5,2023-06-01,EMERGENCY,GENERAL_PRACTITIONER
  5,2023-06-21,EXAM,RADIOLOGIST
  5,2023-06-29,CONSULTATION,GENERAL_PRACTITIONER
  5,2023-07-22,EMERGENCY,GENERAL_PRACTITIONER
  5,2023-08-19,CONSULTATION,GENERAL_PRACTITIONER
  5,2023-08-21,EMERGENCY,NURSE
  5,2023-09-12,FOLLOW_UP,RADIOLOGIST
  5,2023-10-10,CONSULTATION,
  5,2023-11-03,EXAM,RADIOLOGIST
  5,2023-11-27,EXAM,RADIOLOGIST
  7,2023-03-16,CONSULTATION,RADIOLOGIST
  7,2023-04-14,VACCINATION,NURSE
  7,2023-04-22,CONSULTATION,NURSE
  7,2023-06-01,CONSULTATION,RADIOLOGIST
  7,2023-06-02,FOLLOW_UP,SPECIALIST
  7,2023-07-27,FOLLOW_UP,GENERAL_PRACTITIONER
  7,2023-12-04,EXAM,
  
  '''
# ---
# name: TestTimeCriterion.test_filter_sequence_level_sequence_within[event-False-False].1
  '''
  patient_id,gender,age,insurance,chronic_condition
  4,F,79,PUBLIC,False
  5,M,35,MIXED,False
  7,M,80,MIXED,False
  
  '''
# ---
# name: TestTimeCriterion.test_filter_sequence_level_sequence_within[event-False-True]
  '''
  patient_id,date,event_type,provider
  
  '''
# ---
# name: TestTimeCriterion.test_filter_sequence_level_sequence_within[event-False-True].1
  '''
  patient_id,gender,age,insurance,chronic_condition
  
  '''
# ---
# name: TestTimeCriterion.test_filter_sequence_level_sequence_within[event-True-False]
  '''
  patient_id,date,event_type,provider
  4,2023-01-29,VACCINATION,LABORATORY
  4,2023-03-27,VACCINATION,SPECIALIST
  4,2023-04-06,VACCINATION,LABORATORY
  4,2023-04-18,VACCINATION,RADIOLOGIST
  4,2023-05-14,VACCINATION,RADIOLOGIST
  4,2023-06-09,EMERGENCY,NURSE
  4,2023-06-19,FOLLOW_UP,GENERAL_PRACTITIONER
  4,2023-06-28,CONSULTATION,RADIOLOGIST
  4,2023-07-26,EXAM,SPECIALIST
  4,2023-08-19,FOLLOW_UP,NURSE
  4,2023-09-12,EMERGENCY,GENERAL_PRACTITIONER
  5,2023-01-02,EXAM,
  5,2023-02-21,VACCINATION,SPECIALIST
  5,2023-02-23,FOLLOW_UP,
  5,2023-03-22,EMERGENCY,
  5,2023-04-08,EMERGENCY,GENERAL_PRACTITIONER
  5,2023-04-23,FOLLOW_UP,GENERAL_PRACTITIONER
  5,2023-05-06,EXAM,LABORATORY
  5,2023-05-17,FOLLOW_UP,
  5,2023-06-01,EMERGENCY,GENERAL_PRACTITIONER
  5,2023-06-21,EXAM,RADIOLOGIST
  5,2023-06-29,CONSULTATION,GENERAL_PRACTITIONER
  5,2023-07-22,EMERGENCY,GENERAL_PRACTITIONER
  5,2023-08-19,CONSULTATION,GENERAL_PRACTITIONER
  5,2023-08-21,EMERGENCY,NURSE
  5,2023-09-12,FOLLOW_UP,RADIOLOGIST
  5,2023-10-10,CONSULTATION,
  5,2023-11-03,EXAM,RADIOLOGIST
  5,2023-11-27,EXAM,RADIOLOGIST
  7,2023-03-16,CONSULTATION,RADIOLOGIST
  7,2023-04-14,VACCINATION,NURSE
  7,2023-04-22,CONSULTATION,NURSE
  7,2023-06-01,CONSULTATION,RADIOLOGIST
  7,2023-06-02,FOLLOW_UP,SPECIALIST
  7,2023-07-27,FOLLOW_UP,GENERAL_PRACTITIONER
  7,2023-12-04,EXAM,
  
  '''
# ---
# name: TestTimeCriterion.test_filter_sequence_level_sequence_within[event-True-False].1
  '''
  patient_id,gender,age,insurance,chronic_condition
  4,F,79,PUBLIC,False
  5,M,35,MIXED,False
  7,M,80,MIXED,False
  
  '''
# ---
# name: TestTimeCriterion.test_filter_sequence_level_sequence_within[event-True-True]
  '''
  patient_id,date,event_type,provider
  
  '''
# ---
# name: TestTimeCriterion.test_filter_sequence_level_sequence_within[event-True-True].1
  '''
  patient_id,gender,age,insurance,chronic_condition
  
  '''
# ---
# name: TestTimeCriterion.test_filter_sequence_level_sequence_within[interval-False-False]
  '''
  patient_id,start_date,end_date,medication,administration_route,dosage
  6,2023-03-02,2023-03-27,CORTICOSTEROID,INHALATION,1
  6,2023-03-10,2023-03-18,ANTIHYPERTENSIVE,INTRAMUSCULAR,1
  6,2023-04-02,2023-04-18,ANTIHYPERTENSIVE,INHALATION,2
  6,2023-04-21,2023-05-20,CORTICOSTEROID,CUTANEOUS,1
  6,2023-05-06,2023-05-23,CORTICOSTEROID,INTRAVENOUS,3
  6,2023-05-18,2023-06-17,ANTIBIOTIC,INTRAMUSCULAR,1
  6,2023-07-14,2023-07-23,CORTICOSTEROID,INHALATION,2
  7,2023-02-03,2023-02-26,PAIN_RELIEVER,INHALATION,3
  7,2023-03-14,2023-04-04,ANTIBIOTIC,,3
  7,2023-05-13,2023-05-28,ANTICOAGULANT,INTRAMUSCULAR,2
  8,2023-01-14,2023-02-13,CORTICOSTEROID,,3
  8,2023-01-26,2023-02-05,ANTIBIOTIC,ORAL,3
  8,2023-01-28,2023-02-13,ANTIBIOTIC,ORAL,3
  8,2023-03-19,2023-04-18,PAIN_RELIEVER,INHALATION,2
  8,2023-08-26,2023-09-12,ANTICOAGULANT,INHALATION,2
  8,2023-09-10,2023-10-06,PAIN_RELIEVER,CUTANEOUS,3
  8,2023-10-21,2023-10-30,CORTICOSTEROID,ORAL,3
  10,2023-03-11,2023-04-09,ANTICOAGULANT,INTRAVENOUS,2
  10,2023-04-05,2023-05-05,ANTIBIOTIC,INTRAVENOUS,3
  10,2023-04-11,2023-04-23,ANTICOAGULANT,INTRAMUSCULAR,2
  10,2023-08-17,2023-08-24,ANTIHYPERTENSIVE,INHALATION,2
  
  '''
# ---
# name: TestTimeCriterion.test_filter_sequence_level_sequence_within[interval-False-False].1
  '''
  patient_id,gender,age,insurance,chronic_condition
  6,F,68,PUBLIC,False
  7,M,80,MIXED,False
  8,M,83,PRIVATE,True
  10,F,84,MIXED,False
  
  '''
# ---
# name: TestTimeCriterion.test_filter_sequence_level_sequence_within[interval-False-True]
  '''
  patient_id,start_date,end_date,medication,administration_route,dosage
  
  '''
# ---
# name: TestTimeCriterion.test_filter_sequence_level_sequence_within[interval-False-True].1
  '''
  patient_id,gender,age,insurance,chronic_condition
  
  '''
# ---
# name: TestTimeCriterion.test_filter_sequence_level_sequence_within[interval-True-False]
  '''
  patient_id,start_date,end_date,medication,administration_route,dosage
  6,2023-03-02,2023-03-27,CORTICOSTEROID,INHALATION,1
  6,2023-03-10,2023-03-18,ANTIHYPERTENSIVE,INTRAMUSCULAR,1
  6,2023-04-02,2023-04-18,ANTIHYPERTENSIVE,INHALATION,2
  6,2023-04-21,2023-05-20,CORTICOSTEROID,CUTANEOUS,1
  6,2023-05-06,2023-05-23,CORTICOSTEROID,INTRAVENOUS,3
  6,2023-05-18,2023-06-17,ANTIBIOTIC,INTRAMUSCULAR,1
  6,2023-07-14,2023-07-23,CORTICOSTEROID,INHALATION,2
  7,2023-02-03,2023-02-26,PAIN_RELIEVER,INHALATION,3
  7,2023-03-14,2023-04-04,ANTIBIOTIC,,3
  7,2023-05-13,2023-05-28,ANTICOAGULANT,INTRAMUSCULAR,2
  8,2023-01-14,2023-02-13,CORTICOSTEROID,,3
  8,2023-01-26,2023-02-05,ANTIBIOTIC,ORAL,3
  8,2023-01-28,2023-02-13,ANTIBIOTIC,ORAL,3
  8,2023-03-19,2023-04-18,PAIN_RELIEVER,INHALATION,2
  8,2023-08-26,2023-09-12,ANTICOAGULANT,INHALATION,2
  8,2023-09-10,2023-10-06,PAIN_RELIEVER,CUTANEOUS,3
  8,2023-10-21,2023-10-30,CORTICOSTEROID,ORAL,3
  10,2023-03-11,2023-04-09,ANTICOAGULANT,INTRAVENOUS,2
  10,2023-04-05,2023-05-05,ANTIBIOTIC,INTRAVENOUS,3
  10,2023-04-11,2023-04-23,ANTICOAGULANT,INTRAMUSCULAR,2
  10,2023-08-17,2023-08-24,ANTIHYPERTENSIVE,INHALATION,2
  
  '''
# ---
# name: TestTimeCriterion.test_filter_sequence_level_sequence_within[interval-True-False].1
  '''
  patient_id,gender,age,insurance,chronic_condition
  6,F,68,PUBLIC,False
  7,M,80,MIXED,False
  8,M,83,PRIVATE,True
  10,F,84,MIXED,False
  
  '''
# ---
# name: TestTimeCriterion.test_filter_sequence_level_sequence_within[interval-True-True]
  '''
  patient_id,start_date,end_date,medication,administration_route,dosage
  
  '''
# ---
# name: TestTimeCriterion.test_filter_sequence_level_sequence_within[interval-True-True].1
  '''
  patient_id,gender,age,insurance,chronic_condition
  
  '''
# ---
# name: TestTimeCriterion.test_filter_sequence_level_sequence_within[state-False-False]
  '''
  patient_id,start_date,end_date,health_state,condition
  1,2023-01-01,2023-12-16,HEALTHY,DIGESTIVE
  1,2023-12-16,2023-12-31,HEALTHY,
  2,2023-01-01,2023-12-16,HEALTHY,CARDIAC
  2,2023-12-16,2023-12-31,CHRONIC_MONITORING,CARDIAC
  3,2023-01-01,2023-04-05,CONVALESCENCE,CARDIAC
  3,2023-04-05,2023-12-15,CHRONIC_MONITORING,NEUROLOGICAL
  3,2023-12-15,2023-12-31,REMISSION,CARDIAC
  4,2023-01-01,2023-06-08,CHRONIC_MONITORING,NEUROLOGICAL
  4,2023-06-08,2023-07-18,CONVALESCENCE,
  4,2023-07-18,2023-12-14,REMISSION,DIGESTIVE
  4,2023-12-14,2023-12-31,CONVALESCENCE,
  5,2023-01-01,2023-12-16,CONVALESCENCE,DIGESTIVE
  5,2023-12-16,2023-12-31,CHRONIC_MONITORING,DIGESTIVE
  6,2023-01-01,2023-03-09,REMISSION,DIGESTIVE
  6,2023-03-09,2023-08-16,TREATMENT,RESPIRATORY
  6,2023-08-16,2023-12-14,TREATMENT,DIGESTIVE
  6,2023-12-14,2023-12-31,CONVALESCENCE,DIGESTIVE
  7,2023-01-01,2023-05-28,HEALTHY,RESPIRATORY
  7,2023-05-28,2023-07-19,TREATMENT,NEUROLOGICAL
  7,2023-07-19,2023-12-14,HEALTHY,DIGESTIVE
  7,2023-12-14,2023-12-31,REMISSION,RESPIRATORY
  8,2023-01-01,2023-12-16,CONVALESCENCE,RESPIRATORY
  8,2023-12-16,2023-12-31,TREATMENT,
  9,2023-01-01,2023-12-16,CONVALESCENCE,DIGESTIVE
  9,2023-12-16,2023-12-31,HEALTHY,
  10,2023-01-01,2023-12-16,HEALTHY,DIGESTIVE
  10,2023-12-16,2023-12-31,CHRONIC_MONITORING,NEUROLOGICAL
  
  '''
# ---
# name: TestTimeCriterion.test_filter_sequence_level_sequence_within[state-False-False].1
  '''
  patient_id,gender,age,insurance,chronic_condition
  1,F,81,PUBLIC,True
  2,M,31,PRIVATE,False
  3,M,22,MIXED,False
  4,F,79,PUBLIC,False
  5,M,35,MIXED,False
  6,F,68,PUBLIC,False
  7,M,80,MIXED,False
  8,M,83,PRIVATE,True
  9,F,68,MIXED,True
  10,F,84,MIXED,False
  
  '''
# ---
# name: TestTimeCriterion.test_filter_sequence_level_sequence_within[state-False-True]
  '''
  patient_id,start_date,end_date,health_state,condition
  
  '''
# ---
# name: TestTimeCriterion.test_filter_sequence_level_sequence_within[state-False-True].1
  '''
  patient_id,gender,age,insurance,chronic_condition
  
  '''
# ---
# name: TestTimeCriterion.test_filter_sequence_level_sequence_within[state-True-False]
  '''
  patient_id,start_date,end_date,health_state,condition
  1,2023-01-01,2023-12-16,HEALTHY,DIGESTIVE
  1,2023-12-16,2023-12-31,HEALTHY,
  2,2023-01-01,2023-12-16,HEALTHY,CARDIAC
  2,2023-12-16,2023-12-31,CHRONIC_MONITORING,CARDIAC
  3,2023-01-01,2023-04-05,CONVALESCENCE,CARDIAC
  3,2023-04-05,2023-12-15,CHRONIC_MONITORING,NEUROLOGICAL
  3,2023-12-15,2023-12-31,REMISSION,CARDIAC
  4,2023-01-01,2023-06-08,CHRONIC_MONITORING,NEUROLOGICAL
  4,2023-06-08,2023-07-18,CONVALESCENCE,
  4,2023-07-18,2023-12-14,REMISSION,DIGESTIVE
  4,2023-12-14,2023-12-31,CONVALESCENCE,
  5,2023-01-01,2023-12-16,CONVALESCENCE,DIGESTIVE
  5,2023-12-16,2023-12-31,CHRONIC_MONITORING,DIGESTIVE
  6,2023-01-01,2023-03-09,REMISSION,DIGESTIVE
  6,2023-03-09,2023-08-16,TREATMENT,RESPIRATORY
  6,2023-08-16,2023-12-14,TREATMENT,DIGESTIVE
  6,2023-12-14,2023-12-31,CONVALESCENCE,DIGESTIVE
  7,2023-01-01,2023-05-28,HEALTHY,RESPIRATORY
  7,2023-05-28,2023-07-19,TREATMENT,NEUROLOGICAL
  7,2023-07-19,2023-12-14,HEALTHY,DIGESTIVE
  7,2023-12-14,2023-12-31,REMISSION,RESPIRATORY
  8,2023-01-01,2023-12-16,CONVALESCENCE,RESPIRATORY
  8,2023-12-16,2023-12-31,TREATMENT,
  9,2023-01-01,2023-12-16,CONVALESCENCE,DIGESTIVE
  9,2023-12-16,2023-12-31,HEALTHY,
  10,2023-01-01,2023-12-16,HEALTHY,DIGESTIVE
  10,2023-12-16,2023-12-31,CHRONIC_MONITORING,NEUROLOGICAL
  
  '''
# ---
# name: TestTimeCriterion.test_filter_sequence_level_sequence_within[state-True-False].1
  '''
  patient_id,gender,age,insurance,chronic_condition
  1,F,81,PUBLIC,True
  2,M,31,PRIVATE,False
  3,M,22,MIXED,False
  4,F,79,PUBLIC,False
  5,M,35,MIXED,False
  6,F,68,PUBLIC,False
  7,M,80,MIXED,False
  8,M,83,PRIVATE,True
  9,F,68,MIXED,True
  10,F,84,MIXED,False
  
  '''
# ---
# name: TestTimeCriterion.test_filter_sequence_level_sequence_within[state-True-True]
  '''
  patient_id,start_date,end_date,health_state,condition
  
  '''
# ---
# name: TestTimeCriterion.test_filter_sequence_level_sequence_within[state-True-True].1
  '''
  patient_id,gender,age,insurance,chronic_condition
  
  '''
# ---
# name: TestTimeCriterion.test_time_sequence_filtering_via_dict_criterion
  '''
  patient_id,date,event_type,provider
  4,2023-01-29,VACCINATION,LABORATORY
  4,2023-03-27,VACCINATION,SPECIALIST
  4,2023-04-06,VACCINATION,LABORATORY
  4,2023-04-18,VACCINATION,RADIOLOGIST
  4,2023-05-14,VACCINATION,RADIOLOGIST
  4,2023-06-09,EMERGENCY,NURSE
  4,2023-06-19,FOLLOW_UP,GENERAL_PRACTITIONER
  4,2023-06-28,CONSULTATION,RADIOLOGIST
  4,2023-07-26,EXAM,SPECIALIST
  4,2023-08-19,FOLLOW_UP,NURSE
  4,2023-09-12,EMERGENCY,GENERAL_PRACTITIONER
  5,2023-01-02,EXAM,
  5,2023-02-21,VACCINATION,SPECIALIST
  5,2023-02-23,FOLLOW_UP,
  5,2023-03-22,EMERGENCY,
  5,2023-04-08,EMERGENCY,GENERAL_PRACTITIONER
  5,2023-04-23,FOLLOW_UP,GENERAL_PRACTITIONER
  5,2023-05-06,EXAM,LABORATORY
  5,2023-05-17,FOLLOW_UP,
  5,2023-06-01,EMERGENCY,GENERAL_PRACTITIONER
  5,2023-06-21,EXAM,RADIOLOGIST
  5,2023-06-29,CONSULTATION,GENERAL_PRACTITIONER
  5,2023-07-22,EMERGENCY,GENERAL_PRACTITIONER
  5,2023-08-19,CONSULTATION,GENERAL_PRACTITIONER
  5,2023-08-21,EMERGENCY,NURSE
  5,2023-09-12,FOLLOW_UP,RADIOLOGIST
  5,2023-10-10,CONSULTATION,
  5,2023-11-03,EXAM,RADIOLOGIST
  5,2023-11-27,EXAM,RADIOLOGIST
  7,2023-03-16,CONSULTATION,RADIOLOGIST
  7,2023-04-14,VACCINATION,NURSE
  7,2023-04-22,CONSULTATION,NURSE
  7,2023-06-01,CONSULTATION,RADIOLOGIST
  7,2023-06-02,FOLLOW_UP,SPECIALIST
  7,2023-07-27,FOLLOW_UP,GENERAL_PRACTITIONER
  7,2023-12-04,EXAM,
  
  '''
# ---
# name: TestTimeCriterion.test_time_sequence_filtering_via_dict_criterion.1
  '''
  patient_id,gender,age,insurance,chronic_condition
  4,F,79,PUBLIC,False
  5,M,35,MIXED,False
  7,M,80,MIXED,False
  
  '''
# ---
# name: TestTimeCriterion.test_which_time_criterion[event]
  list([
    4,
    5,
    6,
    7,
  ])
# ---
# name: TestTimeCriterion.test_which_time_criterion[interval]
  list([
    3,
    5,
    6,
    7,
    8,
    9,
    10,
  ])
# ---
# name: TestTimeCriterion.test_which_time_criterion[state]
  list([
    1,
    2,
    3,
    4,
    5,
    6,
    7,
    8,
    9,
    10,
  ])
# ---
